New theme, new files

--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "Apex Friendship TSA"
-theme = "hugo-paper"
+theme = "gohugo-theme-ananke"
 [taxonomies]
 	tag = "tags"
 	category = "categories"
